# bluetooth-sil-api

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  oss-pkg-info.yaml
files/pkgconfig/: bluetooth-sil-api.pc.in
include/internal/: sil-tester.h  test_registry.h  utils.h
include/public/: bluetooth-sil-api.h
include/public/bluetooth-sil-api/: a2dp.h  adapter.h  avrcp.h  errors.h  ftp.h  gatt.h  hfp.h  hid.h  map.h  mesh.h  observer.h  opp.h  pairing.h  pan.h  pbap.h  profile.h  properties.h  spp.h  uuid.h
scripts/: testPairing.sh
src/: CMakeLists.txt  main.cpp  test_adapter.cpp  test_adapter_pairing.cpp  test_adapter_properties.cpp  test_device_discovery.cpp  test_power_management.cpp  test_profile_hfp.cpp  test_profile_spp.cpp  test_registry.cpp  utils.cpp
tests/: CMakeLists.txt  test_gatt.cpp  test_uuid.cpp
